--- a/src/app.yaml
+++ b/src/app.yaml
@@ -8,6 +8,10 @@ handlers:
   static_files: css/style.css
   upload: css/style.css
 
+- url: /favicon.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+
 - url: /robots.txt
   static_files: static/robots.txt
   upload: static/robots.txt
