--- a/src/app.yaml
+++ b/src/app.yaml
@@ -34,5 +34,8 @@ handlers:
 - url: /images
   static_dir: images
 
+- url: /stats.*
+  script: $PYTHON_LIB/google/appengine/ext/appstats/ui.py
+
 - url: .*
   script: main.py
